--- a/index.html
+++ b/index.html
@@ -118,13 +118,64 @@
       });
 
       function renderBoard() {
+	  
+	  var dict = ["","फूल 🌺","दाल का हलवा","पूजा"
+,"हिंदी"
+,"मोबाइल 📱"
+,"चश्मा 🕶️"
+,"फल"
+,"सब्जी"
+,"लहसुन"
+,"घूमना"
+,"ट्रेन 🚂"
+,"बस 🚌"
+,"घोड़ा 🐴"
+,"खीर"
+,"दूध"
+,"आइसक्रीम"
+,"गोलगप्पा"
+,"डोसा"
+,"पार्क"
+,"बिस्कुट"
+,"चाय"
+,"बच्चे"
+,"गणित"
+,"साड़ी 🥻"
+,"कोट 🧥"
+,"पैंट"
+,"टाई" 
+,"मैच"
+,"गहने 💎"
+,"रिश्ते "
+,"कुर्सी 🪑"
+,"सिरियल"
+,"दलिया"
+,"फलका"
+,"घर 🏡"
+,"कार 🚗"
+,"स्कूटर 🛵"
+,"चूरी"
+,"दही"
+,"गन्ने का जूस 🥤"
+,"अमरस"
+,"टिक्की"
+,"तोरी"
+,"आम 🥭"
+,"पपीता"
+,"गांव"
+,"फिल्म 📽️"
+,"मंदिर"
+,"ऑफिस"
+,"पैसा 🤑"];
+	  
 
-         for (var i = 0; i < 9; i++) {
+         for (var i = 0; i < 5; i++) {
             var rowStr = "<tr>";
             for (var j = 1; j <= 10; j++) {
-
+				
                var number = i * 10 + j;
-               rowStr = rowStr + "<td class='cell" + number + "'>" + number + "</td>";
+			   var numtxt=number+" "+dict[number]
+               rowStr = rowStr + "<td class='cell" + number + "'>" + numtxt + "</td>";
             }
             rowStr = rowStr + "</tr>";
             $('#numbersTable tr:last').after(rowStr);
