--- a/index.html
+++ b/index.html
@@ -118,55 +118,56 @@
       });
 
       function renderBoard() {
-	  
-	  var dict = ["","फूल 🌺","दाल का हलवा","पूजा"
-,"हिंदी"
-,"मोबाइल 📱"
-,"चश्मा 🕶️"
-,"फल"
-,"सब्जी"
-,"लहसुन"
-,"घूमना"
-,"ट्रेन 🚂"
-,"बस 🚌"
-,"घोड़ा 🐴"
-,"खीर"
-,"दूध"
-,"आइसक्रीम"
-,"गोलगप्पा"
-,"डोसा"
-,"पार्क"
-,"बिस्कुट"
-,"चाय"
-,"बच्चे"
-,"गणित"
-,"साड़ी 🥻"
-,"कोट 🧥"
-,"पैंट"
-,"टाई" 
-,"मैच"
-,"गहने 💎"
-,"रिश्ते "
-,"कुर्सी 🪑"
-,"सिरियल"
-,"दलिया"
-,"फलका"
-,"घर 🏡"
+	var dict = ["","बाजा 🎺"
 ,"कार 🚗"
-,"स्कूटर 🛵"
-,"चूरी"
-,"दही"
-,"गन्ने का जूस 🥤"
-,"अमरस"
-,"टिक्की"
-,"तोरी"
-,"आम 🥭"
-,"पपीता"
-,"गांव"
-,"फिल्म 📽️"
-,"मंदिर"
-,"ऑफिस"
-,"पैसा 🤑"];
+,"हार"
+,"फूल 🌺"
+,"दूल्हा"
+,"बाजोट"
+,"फल 🍓"
+,"मिठाई 🧁"
+,"बारात"
+,"हलवाई"
+,"हाल"
+,"वरमाला"
+,"चाट 🍝"
+,"गेहने"
+,"बहन 👩‍🦰"
+,"माता"
+,"काजल"
+,"मेहँदी"
+,"जुतिया 👠"
+,"पिता 👴🏻"
+,"सिन्दूर"
+,"बस 🚌"
+,"शेरवानी"
+,"फेरे"
+,"पार्टी 🥳"
+,"मंगलसूत्र"
+,"विनायक"
+,"हवन 🔥"
+,"लड़की"
+,"चावल 🍚"
+,"शादि का जोड़ा 🥻"
+,"मेकअप 💄"
+,"साली"
+,"मूंग"
+,"राजभोग"
+,"मायरा"
+,"गुड़"
+,"नाच 💃"
+,"लड़का 👳🏻‍"
+,"सेहरा"
+,"पाटा"
+,"मंडप"
+,"भाई 👦"
+,"पंडित"
+,"लाडू"
+,"हल्दी"
+,"गीत 🎶"
+,"बान"
+,"दही 🥛"
+,"घी पिलाना"];
 	  
 
          for (var i = 0; i < 5; i++) {
@@ -174,8 +175,10 @@
             for (var j = 1; j <= 10; j++) {
 				
                var number = i * 10 + j;
-			   var numtxt=number+" "+dict[number]
+			   //var numtxt=number+" "+dict[number]
+			   var numtxt=dict[number]
                rowStr = rowStr + "<td class='cell" + number + "'>" + numtxt + "</td>";
+			   
             }
             rowStr = rowStr + "</tr>";
             $('#numbersTable tr:last').after(rowStr);
